@@ -7,8 +7,9 @@ AC_HAVE_HEADERS(unistd.h sys/time.h regex.h regexp.h)
 AC_HAVE_FUNCS(re_comp regcomp)
 AC_HEADER_EGREP(time_t, sys/types.h, AC_DEFINE(POSIX_TYPES))
 HAS_ANSI_VOLATILE
-USE_ANAME
 AC_DEFINE(AN_TO_LN_RULES)
+USE_ANAME
 V5_SHARED_LIB_OBJS
+KRB5_LIBRARIES
 SubdirLibraryRule([${OBJS}])
 V5_AC_OUTPUT_MAKEFILE
